# BI-Agent

./: .gitignore  CONTRIBUTING.md  FIXES.md  INSTALL.md  LICENSE  README.md  example_usage.sh  pyproject.toml  requirements.txt
bi_agent/: __init__.py  cli.py
bi_agent/agent/: __init__.py  agent.py  agent_basics.py  base_agent.py  bi_agent.py
bi_agent/channel/: README.md  __init__.py  channel.py  channel_factory.py  common.py
bi_agent/channel/dingTalk/: __init__.py  api_client.py  report_reply.py  server.py
bi_agent/channel/feishu/: README.md  __init__.py  api_client.py  message_deduplicator.py  report_reply.py  server.py
bi_agent/prompts/: __init__.py  system_prompt.py  task_prompts.py
bi_agent/tools/: __init__.py  base.py  bash_tool.py  data_cleaner_tool.py  data_reader_tool.py  mcp_tool.py  python_executor_tool.py  report_generator_tool.py  search_knowledge_tool.py  task_done_tool.py  visualization_tool.py
bi_agent/utils/: __init__.py  console_output.py  exceptions.py  logger.py  memory_manager.py  step_summarizer.py  system_info.py  trajectory_recorder.py  typing_compat.py
bi_agent/utils/llm_clients/: __init__.py  doubao_client.py  llm_basics.py  llm_client.py  openai_client.py  qwen_client.py
data/: README.md
data/analysis_on_student_loan/: ucla_sample.txt  ucla_students.txt
docs/: DOUBAO_USAGE.md  QWEN_USAGE.md
docs/demo/: README.md
evaluate/: DSBENCH_EVALUATION_README.md  __init__.py  evaluate_dsbench.py  evaluate_dsbench_utils.py
tests/channel/: __init__.py
tests/channel/feishu/: __init__.py  test_report_send.py
